--- a/Backup/index.html
+++ b/Backup/index.html
@@ -6,43 +6,23 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/ajax.js"></script>
-  <script type="text/javascript" src="js/dinamic.js"></script>
-  <script type="text/javascript" src="js/jspdf.min.js"></script>
-  <script type="text/javascript" src="js/PDFgenerator.js"></script>
+  <script type="text/javascript" src="ajax.js"></script>
+  <script type="text/javascript" src="dinamic.js"></script>
+  <script type="text/javascript" src="jspdf.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <title></title>
 </head>
 
 <body ng-app="">
-
   <div class="container">
     <div class="row">
-      <div class="col-sm-4" align="center">
-        <br>
-        <img src="logo_chocoramo.png" alt="Chocorramo" width="300" height="100" style="left:0px">
-      </div>
-      <div class="col-sm-8 titulo">
-        <article>
-          <header>
-            <h1>Ponqués Chocorramo</h1>
-            <p>Imposible gastar en nosotros</p>
-          </header>
-        </article>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-5">
+      <div class="col-sm-6">
         <h2>Datos Importantes</h2>
         <form name="myForm">
           <div class="form-group">
             <label for="usuario">Nombre:</label>
             <input type="text" name="usuario" class="form-control" id="usuario" value="Yuan-Pi" ng-model="usuario" required>
-          </div>
-          <div class="form-group">
-            <label for="cedula">Cedula:</label>
-            <input type="text" name="cedula" class="form-control" id="cedula" value="Yuan-Pi" ng-model="cedula" required>
           </div>
           <div class="form-group">
             <label for="monto">Monto:</label>
@@ -63,13 +43,13 @@
           </div>
           <h3>Periodicidad</h3>
           <div class="radio">
-            <label><input type="radio" name="Periodicidad" id="Periodicidad" value="12" checked> Mensual</label>
+            <label><input type="radio" name="Periodicidad" value="12" checked> Mensual</label>
           </div>
           <div class="radio">
-            <label><input type="radio" name="Periodicidad" id="Periodicidad"  value="4"> Trimestral</label>
+            <label><input type="radio" name="Periodicidad" value="4"> Trimestral</label>
           </div>
           <div class="radio">
-            <label><input type="radio" name="Periodicidad" id="Periodicidad"  value="2"> Semestral </label>
+            <label><input type="radio" name="Periodicidad" value="2"> Semestral </label>
           </div>
 
           <h3>Tasa de Interes</h3>
@@ -109,12 +89,11 @@
 
         <button type="button" ng-disabled="myForm.monto.$invalid || myForm.usuario.invalid || (myForm.myInput.$valid && myForm.myInput2.$valid && myForm.myInput3.$valid)" class="btn btn-primary btn-block" id="ok" onclick="ajaxConnect(n1.value, n2.value, n3.value, monto.value)">Saber si voy a pasar la materia</button>
       </div>
-      <div class="col-sm-7">
+      <div class="col-sm-6">
         <h2>Resultado</h2>
         <div class="tabla" id="r"></div>
       </div>
     </div>
-
 
     <div class="row">
       <br>
